--- a/data/global-settings.html
+++ b/data/global-settings.html
@@ -22,9 +22,9 @@
       </div>
 
       <div class="colelem value_heading">
-        HOME POSITION ( CURRENT: 
+        HOME POSITION ( CURRENT:
         <div class="value_current" id="limit_home_current">??</div>
-         m )
+        m )
       </div>
       <div class="colelem value_row">
         <div class="grpelem value_name width_half">
@@ -64,13 +64,13 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1"  id="limit_max_turn1" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" step="0.1" id="limit_max_turn1" onChange="validate_all()">
           </p>
         </div>
       </div>
 
       <div class="colelem value_heading">
-        MIN TURN 2 ( CURRENT: 
+        MIN TURN 2 ( CURRENT:
         <div class="value_current" id="limit_min_turn2_current">??</div>
         m )
       </div>
@@ -112,7 +112,7 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1 "id="limit_max_dec" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" step="0.1 " id="limit_max_dec" onChange="validate_all()">
           </p>
         </div>
       </div>
@@ -128,7 +128,7 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1 "id="limit_max_speed" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" step="0.1 " id="limit_max_speed" onChange="validate_all()">
           </p>
         </div>
       </div>
@@ -144,7 +144,8 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1 "id="limit_homing_speed" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" step="0.1 " id="limit_homing_speed"
+              onChange="validate_all()">
           </p>
         </div>
       </div>
@@ -183,7 +184,7 @@
 
 
 
-    <div class="colelem value_heading">
+      <div class="colelem value_heading">
         SERVICE MODE SPEED LIMIT ( CURRENT:
         <div class="value_current" id="limit_serv_speed_current">??</div>
         km/h )
@@ -194,7 +195,7 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1 "id="limit_serv_speed" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" step="0.1 " id="limit_serv_speed" onChange="validate_all()">
           </p>
         </div>
       </div>
@@ -202,11 +203,11 @@
 
 
       <div class="colelem" style="padding-top: 14px;">
-        <a href="javascript:set_mode_values()" class="save_button width_full" id="set_button" >SET</a>
+        <a href="javascript:set_mode_values()" class="save_button width_full" id="set_button">SET</a>
       </div>
 
-      <a class="nonblock nontext clip_frame colelem" id="u1231" href="program-selector.html"><img
-        class="svg" id="u1227" width="75" height="75" alt="back" src="images/left-arrow.svg" /></a>
+      <a class="nonblock nontext clip_frame colelem" id="u1231" href="program-selector.html"><img class="svg" id="u1227"
+          width="75" height="75" alt="back" src="images/left-arrow.svg" /></a>
 
       <div class="verticalspacer">
       </div>
