--- a/data/novice.html
+++ b/data/novice.html
@@ -22,9 +22,9 @@
       </div>
 
       <div class="colelem value_heading">
-        SPEED ( CURRENT: 
+        SPEED ( CURRENT:
         <div class="value_current" id="mode_speed_current">??</div>
-         km/h )
+        km/h )
       </div>
       <div class="colelem value_row">
         <div class="grpelem value_name width_half">
@@ -64,13 +64,13 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1"  id="mode_turn2" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" step="0.1" id="mode_turn2" onChange="validate_all()">
           </p>
         </div>
       </div>
 
       <div class="colelem value_heading">
-        BRAKE TIME ( CURRENT: 
+        BRAKE TIME ( CURRENT:
         <div class="value_current" id="mode_brake_time_current">??</div>
         s )
       </div>
@@ -112,17 +112,17 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1 "id="mode_dec" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" step="0.1 " id="mode_dec" onChange="validate_all()">
           </p>
         </div>
       </div>
 
       <div class="colelem" style="padding-top: 14px;">
-        <a href="javascript:set_mode_values()" class="save_button width_full" id="set_button" >SET</a>
+        <a href="javascript:set_mode_values()" class="save_button width_full" id="set_button">SET</a>
       </div>
 
-      <a class="nonblock nontext clip_frame colelem" id="u1231" href="program-selector.html"><img
-        class="svg" id="u1227" width="75" height="75" alt="back" src="images/left-arrow.svg" /></a>
+      <a class="nonblock nontext clip_frame colelem" id="u1231" href="program-selector.html"><img class="svg" id="u1227"
+          width="75" height="75" alt="back" src="images/left-arrow.svg" /></a>
 
       <div class="verticalspacer">
       </div>
