Reorganize javascript files

--- a/data/global-settings.html
+++ b/data/global-settings.html
@@ -5,9 +5,10 @@
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Novice</title>
+  <title>Global Settings</title>
   <script type="text/javascript" src="scripts/jquery-3.6.0.min.js"></script>
-  <script type="text/javascript" src="scripts/global-settings.js"></script>
+  <script type="text/javascript" src="scripts/common.js"></script>
+  <script type="text/javascript" src="scripts/global-settings.js" defer></script>
   <link rel="stylesheet" type="text/css" href="css/site_global.css" />
   <link rel="stylesheet" type="text/css" href="css/mode.css" id="pagesheet" />
 </head>
