Update placeholder values and defaults

--- a/data/novice.html
+++ b/data/novice.html
@@ -24,7 +24,7 @@
 
       <div class="colelem value_heading">
         SPEED ( CURRENT:
-        <div class="value_current" id="mode_speed_current">??</div>
+        <div class="value_current" id="mode_speed_current">--</div>
         km/h )
       </div>
       <div class="colelem value_row">
@@ -33,14 +33,14 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1" id="mode_speed" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_speed" onChange="validate_all()">
           </p>
         </div>
       </div>
 
       <div class="colelem value_heading">
         END TURNING POINT ( CURRENT:
-        <div class="value_current" id="mode_turn1_current">??</div>
+        <div class="value_current" id="mode_turn1_current">--</div>
         m )
       </div>
       <div class="colelem value_row">
@@ -49,14 +49,14 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1" id="mode_turn1" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_turn1" onChange="validate_all()">
           </p>
         </div>
       </div>
 
       <div class="colelem value_heading">
         NEAR TURNING POINT ( CURRENT:
-        <div class="value_current" id="mode_turn2_current">??</div>
+        <div class="value_current" id="mode_turn2_current">--</div>
         m )
       </div>
       <div class="colelem value_row">
@@ -65,14 +65,14 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1" id="mode_turn2" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_turn2" onChange="validate_all()">
           </p>
         </div>
       </div>
 
       <div class="colelem value_heading">
         BRAKE TIME ( CURRENT:
-        <div class="value_current" id="mode_brake_time_current">??</div>
+        <div class="value_current" id="mode_brake_time_current">--</div>
         s )
       </div>
       <div class="colelem value_row">
@@ -81,14 +81,14 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1" id="mode_brake_time" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_brake_time" onChange="validate_all()">
           </p>
         </div>
       </div>
 
       <div class="colelem value_heading">
         ACCELERATION ( CURRENT:
-        <div class="value_current" id="mode_acc_current">??</div>
+        <div class="value_current" id="mode_acc_current">--</div>
         m/s<sup>2</sup> )
       </div>
       <div class="colelem value_row">
@@ -97,14 +97,14 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1" id="mode_acc" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_acc" onChange="validate_all()">
           </p>
         </div>
       </div>
 
       <div class="colelem value_heading">
         DECELERATION ( CURRENT:
-        <div class="value_current" id="mode_dec_current">??</div>
+        <div class="value_current" id="mode_dec_current">--</div>
         m/s<sup>2</sup> )
       </div>
       <div class="colelem value_row">
@@ -113,7 +113,7 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1 " id="mode_dec" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1 " id="mode_dec" onChange="validate_all()">
           </p>
         </div>
       </div>
