--- a/data/global-settings.html
+++ b/data/global-settings.html
@@ -24,7 +24,7 @@
 
       <div class="colelem value_heading">
         HOME POSITION ( CURRENT:
-        <div class="value_current" id="limit_home_current">??</div>
+        <div class="value_current" id="limit_home_current">--</div>
         m )
       </div>
       <div class="colelem value_row">
@@ -33,14 +33,14 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1" id="limit_home" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="limit_home" onChange="validate_all()">
           </p>
         </div>
       </div>
 
       <div class="colelem value_heading">
         MAX END ( CURRENT:
-        <div class="value_current" id="limit_max_end_current">??</div>
+        <div class="value_current" id="limit_max_end_current">--</div>
         m )
       </div>
       <div class="colelem value_row">
@@ -49,14 +49,14 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1" id="limit_max_end" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="limit_max_end" onChange="validate_all()">
           </p>
         </div>
       </div>
 
       <div class="colelem value_heading">
         MAX TURN 1 ( CURRENT:
-        <div class="value_current" id="limit_max_turn1_current">??</div>
+        <div class="value_current" id="limit_max_turn1_current">--</div>
         m )
       </div>
       <div class="colelem value_row">
@@ -65,14 +65,14 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1" id="limit_max_turn1" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="limit_max_turn1" onChange="validate_all()">
           </p>
         </div>
       </div>
 
       <div class="colelem value_heading">
         MIN TURN 2 ( CURRENT:
-        <div class="value_current" id="limit_min_turn2_current">??</div>
+        <div class="value_current" id="limit_min_turn2_current">--</div>
         m )
       </div>
       <div class="colelem value_row">
@@ -81,14 +81,14 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1" id="limit_min_turn2" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="limit_min_turn2" onChange="validate_all()">
           </p>
         </div>
       </div>
 
       <div class="colelem value_heading">
         MAX ACCELERATION ( CURRENT:
-        <div class="value_current" id="limit_max_acc_current">??</div>
+        <div class="value_current" id="limit_max_acc_current">--</div>
         m/s<sup>2</sup> )
       </div>
       <div class="colelem value_row">
@@ -97,14 +97,14 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1" id="limit_max_acc" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="limit_max_acc" onChange="validate_all()">
           </p>
         </div>
       </div>
 
       <div class="colelem value_heading">
         MAX DECELERATION ( CURRENT:
-        <div class="value_current" id="limit_max_dec_current">??</div>
+        <div class="value_current" id="limit_max_dec_current">--</div>
         m/s<sup>2</sup> )
       </div>
       <div class="colelem value_row">
@@ -113,14 +113,14 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1 " id="limit_max_dec" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1 " id="limit_max_dec" onChange="validate_all()">
           </p>
         </div>
       </div>
 
       <div class="colelem value_heading">
         MAX SPEED ( CURRENT:
-        <div class="value_current" id="limit_max_speed_current">??</div>
+        <div class="value_current" id="limit_max_speed_current">--</div>
         km/h )
       </div>
       <div class="colelem value_row">
@@ -129,14 +129,14 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1 " id="limit_max_speed" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1 " id="limit_max_speed" onChange="validate_all()">
           </p>
         </div>
       </div>
 
       <div class="colelem value_heading">
         HOMING SPEED ( CURRENT:
-        <div class="value_current" id="limit_homing_speed_current">??</div>
+        <div class="value_current" id="limit_homing_speed_current">--</div>
         km/h )
       </div>
       <div class="colelem value_row">
@@ -145,7 +145,7 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1 " id="limit_homing_speed"
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1 " id="limit_homing_speed"
               onChange="validate_all()">
           </p>
         </div>
@@ -153,7 +153,7 @@
 
       <div class="colelem value_heading">
         MAX TIME ( CURRENT:
-        <div class="value_current" id="limit_max_time_current">??</div>
+        <div class="value_current" id="limit_max_time_current">--</div>
         )
       </div>
       <div class="colelem value_row">
@@ -162,14 +162,14 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" id="limit_max_time" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" id="limit_max_time" onChange="validate_all()">
           </p>
         </div>
       </div>
 
       <div class="colelem value_heading">
         MAX LAPS ( CURRENT:
-        <div class="value_current" id="limit_max_laps_current">??</div>
+        <div class="value_current" id="limit_max_laps_current">--</div>
         )
       </div>
       <div class="colelem value_row">
@@ -178,7 +178,7 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" id="limit_max_laps" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" id="limit_max_laps" onChange="validate_all()">
           </p>
         </div>
       </div>
@@ -187,7 +187,7 @@
 
       <div class="colelem value_heading">
         SERVICE MODE SPEED LIMIT ( CURRENT:
-        <div class="value_current" id="limit_serv_speed_current">??</div>
+        <div class="value_current" id="limit_serv_speed_current">--</div>
         km/h )
       </div>
       <div class="colelem value_row">
@@ -196,7 +196,7 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" step="0.1 " id="limit_serv_speed" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1 " id="limit_serv_speed" onChange="validate_all()">
           </p>
         </div>
       </div>
