--- a/data/system.html
+++ b/data/system.html
@@ -18,26 +18,33 @@
           <textarea style='overflow: scroll; min-width: 99%; min-height: 500px' id='debugLog'></textarea>
         </fieldset>
         <fieldset>
+          <legend>System Status</legend>
+          <div>Build ID: <div id="buildId" style="display: inline;">--</div>
+          </div>
+          <div>Build Time: <div id="buildTime" style="display: inline;">--</div>
+          </div>
+        </fieldset>
+        <fieldset>
           <legend>Wifi Configuration</legend>
           <label for='wifiSsid'>SSID</label>
           <input type="text" name="" id="wifiSsid">
           <label for='wifiPassword'>Password</label>
-          <input type="text" name="" id="wifiPassword">
+          <input type="password" name="" id="wifiPassword">
           <input type='submit' onclick="set_config()" value='Set Wifi Configuration'>
         </fieldset>
         <fieldset>
           <legend>Firmware Update</legend>
           <form method='POST' action='#' enctype='multipart/form-data' id='updateFirmware'>
             <fieldset>
-              <label for='updateFile'>Firmware</label>
-              <input class='' type='file' name='update' id='updateFile'>
+              <label for='updateFirmwareFile'>Firmware</label>
+              <input class='' type='file' name='update' id='updateFirmwareFile'>
               <input class='button-primary' type='submit' value='Update Firmware'>
             </fieldset>
           </form>
           <form method='POST' action='#' enctype='multipart/form-data' id='updateSpiffs'>
             <fieldset>
-              <label for='updateFile'>SPIFFS</label>
-              <input type='file' name='update' id='updateFile'>
+              <label for='updateSpiffsFile'>SPIFFS</label>
+              <input type='file' name='update' id='updateSpiffsFile'>
               <input type='submit' value='Update Spiffs'>
             </fieldset>
           </form>
