Major overhaul, use Websocket for communication instead of AJAX

--- a/data/program-selector.html
+++ b/data/program-selector.html
@@ -10,11 +10,11 @@
   <title>Program Selector</title>
 
   <script type="text/javascript" src="scripts/jquery-3.6.0.min.js"></script>
-  <script type="text/javascript" src="scripts/status.js"></script>
+  <script type="text/javascript" src="scripts/common.js"></script>
+  <script type="text/javascript" src="scripts/status.js" defer></script>
 
-  <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867" />
-  <link rel="stylesheet" type="text/css" href="css/program-selector.css?crc=411228881" id="pagesheet" />
+  <link rel="stylesheet" type="text/css" href="css/site_global.css" />
+  <link rel="stylesheet" type="text/css" href="css/program-selector.css" id="pagesheet" />
 
 </head>
 
@@ -100,4 +100,5 @@
   </div>
   </div>
 </body>
+
 </html>
