--- a/data/system.html
+++ b/data/system.html
@@ -6,7 +6,8 @@
   <script src='scripts/jquery-3.6.0.min.js'></script>
   <script src='scripts/update.js'></script>
   <script src='scripts/logsocket.js'></script>
-  <script src='scripts/system.js'></script>
+  <script src='scripts/common.js'></script>
+  <script src='scripts/system.js' defer></script>
 </head>
 
 <body>
