--- a/data/novice.html
+++ b/data/novice.html
@@ -33,7 +33,7 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_speed" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_speed" onInput="validateAll()">
           </p>
         </div>
       </div>
@@ -49,7 +49,7 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_turn1" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_turn1" onInput="validateAll()">
           </p>
         </div>
       </div>
@@ -65,7 +65,7 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_turn2" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_turn2" onInput="validateAll()">
           </p>
         </div>
       </div>
@@ -81,7 +81,7 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_brake_time" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_brake_time" onInput="validateAll()">
           </p>
         </div>
       </div>
@@ -97,7 +97,7 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_acc" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_acc" onInput="validateAll()">
           </p>
         </div>
       </div>
@@ -113,13 +113,13 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_dec" onChange="validate_all()">
+            <input class="grpelem width_half" type="number" placeholder="--" step="0.1" id="mode_dec" onInput="validateAll()">
           </p>
         </div>
       </div>
 
       <div class="colelem" style="padding-top: 14px;">
-        <a href="javascript:set_mode_values()" class="save_button width_full" id="set_button">SET</a>
+        <a href="javascript:uploadModeValues()" class="save_button width_full" id="set_button">SET</a>
       </div>
 
       <a class="nonblock nontext clip_frame colelem" id="u1231" href="program-selector.html"><img class="svg" id="u1227"
