Abbreviate SPEED->SPD to fit on single line

--- a/data/global-settings.html
+++ b/data/global-settings.html
@@ -125,7 +125,7 @@
       </div>
       <div class="colelem value_row">
         <div class="grpelem value_name width_half">
-          <p>MAX SPEED</p>
+          <p>MAX SPD</p>
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
@@ -141,7 +141,7 @@
       </div>
       <div class="colelem value_row">
         <div class="grpelem value_name width_half">
-          <p>HOME SPEED</p>
+          <p>HOME SPD</p>
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
@@ -189,7 +189,7 @@
       </div>
       <div class="colelem value_row">
         <div class="grpelem value_name width_half">
-          <p>SERVICE SPEED</p>
+          <p>SERV SPD</p>
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
