Add CPU utilization stats in system page

--- a/data/system.html
+++ b/data/system.html
@@ -24,7 +24,9 @@
           </div>
           <div>Build Time: <div id="buildTime" style="display: inline;">--</div>
           </div>
-          <div>Memory: <div id="memory" style="display: inline;">--</div>
+          <div>Memory: <div id="memoryStats" style="display: inline;">--</div>
+          </div>
+          <div>CPU: <div id="cpuStats" style="display: inline;">--</div>
           </div>
         </fieldset>
         <fieldset>
