Remove CPU usage statistics - did not work particularly well

--- a/data/system.html
+++ b/data/system.html
@@ -20,14 +20,9 @@
         </fieldset>
         <fieldset>
           <legend>System Status</legend>
-          <div>Build ID: <div id="buildId" style="display: inline;">--</div>
-          </div>
-          <div>Build Time: <div id="buildTime" style="display: inline;">--</div>
-          </div>
-          <div>Memory: <div id="memoryStats" style="display: inline;">--</div>
-          </div>
-          <div>CPU: <div id="cpuStats" style="display: inline;">--</div>
-          </div>
+          <div>Build ID: <div id="buildId" style="display: inline;">--</div></div>
+          <div>Build Time: <div id="buildTime" style="display: inline;">--</div></div>
+          <div>Memory: <div id="memoryStats" style="display: inline;">--</div></div>
         </fieldset>
         <fieldset>
           <legend>Wifi Configuration</legend>
