--- a/data/system.html
+++ b/data/system.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Loop32 service mode</title>
+  <title>Loop32 system status</title>
   <script src='scripts/jquery-3.6.0.min.js'></script>
   <script src='scripts/update.js'></script>
   <script src='scripts/logsocket.js'></script>
@@ -12,7 +12,7 @@
 
 <body>
   <main>
-    <divstyle='max-width: 99%'>
+    <div style='max-width: 99%'>
       <div>
         <fieldset>
           <legend>Debug log</legend>
@@ -20,17 +20,13 @@
         </fieldset>
         <fieldset>
           <legend>System Status</legend>
+          <div>Memory: <div id="memoryStats" style="display: inline;">--</div></div>
+          <div>
+            Wifi SSID: <div id="wifiSsid" style="display: inline;">--</div>;
+            WifiStatus: <div id="wifiStatus" style="display: inline;">--</div>
+          </div>
           <div>Build ID: <div id="buildId" style="display: inline;">--</div></div>
           <div>Build Time: <div id="buildTime" style="display: inline;">--</div></div>
-          <div>Memory: <div id="memoryStats" style="display: inline;">--</div></div>
-        </fieldset>
-        <fieldset>
-          <legend>Wifi Configuration</legend>
-          <label for='wifiSsid'>SSID</label>
-          <input type="text" name="" id="wifiSsid">
-          <label for='wifiPassword'>Password</label>
-          <input type="password" name="" id="wifiPassword">
-          <input type='submit' onclick="uploadConfig()" value='Set Wifi Configuration'>
         </fieldset>
         <fieldset>
           <legend>Firmware Update</legend>
